MultiCheckboxFacets content overlapping issue fix

--- a/src/components/MultipleCheckboxFacets/MultipleCheckboxFacets.scss
+++ b/src/components/MultipleCheckboxFacets/MultipleCheckboxFacets.scss
@@ -52,13 +52,13 @@
     box-shadow: shadow();
     width: 100%;
     margin-top: 1.4rem;
-    z-index: 3 
+    z-index: 99 
 }
 .isAccordionNot{
     max-height: 0px;
     overflow: hidden;
     background-color: #fff;
-    z-index: 3;
+    z-index: 99;
     position: relative;
 }
 .arrowIcon{
